79

* GTK3 update by Flavio
* Sound alerts by Ignacio
* Notifications by Jorge and SAMdroid

78

* Replace cjson with json #3142
* Update translations

77

* Fix issue of not packaging .mo translation files
* Chat text lines offset on screen lower than username #3634
* Update translations

76

* Support "Write to Journal Anytime" feature in Sugar 0.86

75

* Scroll the chat log #2782 (Manuel Kaufmann)
* Don't treat the whole word as an URL (Manuel Kaufmann)
* Update translations

74

* Remove use of hippo (Gonzalo Odiard)
* Update translations

73

* Return langs back by generating locale/ directory

72

* Update translations

71

* Chat i18n enhancement #2903 (Chris Leonard)
* Remove the KeepButton due to deprecation (Simon Schampijer)
* Fix View Source behaviour
* Update i18n

70

* Support gtk<2.18, eg, fc11
* Make smilies sensitive only in online mode
* After choosing a smyle, focus entry widget
* Update translations for de

69

* Add chat smilies (Mukesh Gupta)
* Update translations for en_US

68

* Update translations for de and ta

67

* Remove access to a private member (Tomeu Vizoso)
* Update translations for hi, nl

66

* Utilize new toolbars design
* Add new translations: mg, sq, ta

65

* Support new activity.info exec parameter (alsroot)
* #402: "share or invite" hint even on resume of shared instance (alsroot)

46

* Version bump to allow for stable releases after v48
* #8772: Fix journal entry creation in Chat for uri-list (kevix)
* #8471: Allow resuming Chat log in Write (morgs)
* #8411: Add license to activity.info (morgs)
* Remove parameter from bundlebuilder.start (morgs)
* Add update_url for software updater (morgs)

45

* Updated translations: sl, nb, el, mr, rw, ur, ne
* Fixed MANIFEST to include all translations (morgs)

44

* #7633: Close the text channel when stopping a 1-1 chat (morgs)
* #7717: Log incoming messages (morgs)
* #7692: Don't show pending messages when joining a chat (morgs)
* Updated translations: nl, te, es, mn

43
