@@ -3,6 +3,7 @@
 * GTK3 update by Flavio
 * Sound alerts by Ignacio
 * Notifications by Jorge and SAMdroid
+* Add more options (unicode chars) to smilies palette
 
 78
 
